# smtp_mailer

./: .gitignore  Makefile  README.md  config_example.ini  pyproject.toml  recipients_example.csv  smtp_mailer.py
