[project]
name = "smtp-mailer"
version = "0.1.0"
description = "SMTP Mailer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosmtplib>=4.0.1",
    "colorama>=0.4.6",
    "email-validator>=2.2.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.1",
    "ruff>=0.12.0",
]
